Javadoc complete.  Some of these files got wacked by JBuilder's trimming of trailing spaces (which I didn't realize was on), so if you need to do diffs, you should use a diff problem that can turn off comparisons based on trailing spaces.
git-svn-id: https://svn.eu.apache.org/repos/asf/xalan/java/trunk@333815 13f79535-47bb-0310-9956-ffa450edef68